# mpri-2.4-projet-2023-2024

./: README.md  constrained_generation.opam  dune  dune-project
src/: Constraint.ml  Generator.ml  Generator.mli  Infer.ml  Infer.mli  MRand.ml  MRand.mli  MSeq.ml  STLC.ml  Solver.ml  Solver.mli  Structure.ml  Structure.mli  Unif.ml  Unif.mli  Untyped.ml  Utils.ml  dune
src/support/: ConstraintPrinter.ml  ConstraintPrinter.mli  ConstraintSimplifier.ml  ConstraintSimplifier.mli  Decode.ml  Decode.mli  Printer.ml  STLCPrinter.ml  STLCPrinter.mli  SatConstraint.ml  UntypedLexer.mll  UntypedParser.mly  UntypedPrinter.ml  UntypedPrinter.mli  dune
tests.t/: annot_arrow.test  curry.test  error.test  id_int.test  id_poly.test  let_prod.test  prod_annot.test  run.t  selfapp.test  uncurry.test
